<?xml version="1.0" encoding="utf-8"?>

<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/exercises_load"
            android:icon="@drawable/ic_fluent_arrow_upload_24_filled"
            android:title="@string/load"
            app:showAsAction="always"/>

    <item
            android:id="@+id/exercises_trash"
            android:icon="@drawable/ic_fluent_delete_24_filled"
            android:title="@string/delete"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/exercises_share"
            android:icon="@drawable/ic_fluent_share_24_filled"
            android:title="@string/share"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/exercises_edit"
            android:icon="@drawable/ic_fluent_rename_24_filled"
            android:title="@string/edit"
            app:showAsAction="never"/>

</menu>