<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="wrap_content"
                                                   android:layout_height="wrap_content">

    <com.sdsmdg.harjot.crollerTest.Croller
            android:id="@+id/metronome_bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/metronome_bpm"
            app:back_circle_color="#EDEDED"
            app:indicator_color="#0B3C49"
            app:indicator_width="10"
            app:is_continuous="false"
            app:label_color="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toStartOf="@+id/metronome_linearLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:main_circle_color="#FFFFFF"
            app:progress_primary_color="?attr/colorPrimary"
            app:progress_secondary_color="#EEEEEE"
            app:start_offset="45"/>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/metronome_linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/metronome_bpm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/metronome_bpm"
            app:layout_constraintTop_toTopOf="@+id/metronome_bpm">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_signature"/>

        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/metronome_spinner_numerator"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/metronome_spinner_denominator"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/to_disable_the_special_sound_on_the_first_beat_set_the_denominator_to_0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>